@@ -25,7 +25,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-08-20"
+set version "2025-08-22"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -450,6 +450,7 @@ set console 0;			# Valid values: 0=hide, 1=show
 
 set ctid [thread::create -joinable "
   package require Tk
+  package require tcl::chan::fifo2
   wm withdraw .
   wm title . \"$title - [mc l99]\"
   set font_size ${console.font.size}
@@ -504,7 +505,6 @@ ctsend {
     .txt yview moveto [lindex $py 0]
   }
 
-  set aid 0
   proc write {text} {
     .txt configure -state normal
     if {[string index $text 0] == "\r"} {
@@ -513,14 +513,12 @@ ctsend {
     }
     .txt insert end $text
     .txt configure -state disabled
-    # Prevent the console from freezing when
-    # flooded with incoming write requests
-    catch "after cancel $::aid"
-    set ::aid [after 100 {.txt see end}]
+    if {[winfo ismapped .]} {.txt see end}
   }
 
   proc show_hide {show} {
     if {$show} {
+      .txt see end
       if {$::geometry == ""} {
 	wm deiconify .
       } else {
@@ -537,7 +535,18 @@ ctsend {
     }
   }
 
+  lassign [::tcl::chan::fifo2] fdi fdo
+  thread::detach $fdo
+  fconfigure $fdi -blocking 0 -buffering line -translation lf
+  fileevent $fdi readable "
+    while {\[gets $fdi line\] >= 0} {write \"\$line\\n\"}
+  "	
 }
+
+set fdo [ctsend "set fdo"]
+thread::attach $fdo
+fconfigure $fdo -blocking 0 -buffering line -translation lf
+interp alias {} ::cputs {} ::puts $fdo
 
 if {$console == 1} {
   set console.show 1
@@ -546,7 +555,6 @@ if {$console == 1} {
 
 # Write to console
 
-proc cputs {text} {thread::send -async $::ctid [list write $text\n]}
 proc cputi {text} {cputs "\[---\] $text"}
 proc cputw {text} {cputs "\[+++\] $text"}
 
@@ -621,7 +629,12 @@ if {!$rc} {
 
 if {$rc || $java_version == 0} \
   {error_message [mc e08 Java [get_shell_command $command] $result] exit}
-if {$java_version < 11} {error_message [mc e07 Java $java_string 11] exit}
+
+# Check minimum required Java version
+
+set java_version_min 11
+if {$java_version < $java_version_min} \
+  {error_message [mc e07 Java $java_string $java_version_min] exit}
 
 # Evaluate numeric Mapsforge server version
 # from output line ending with version string " version: x.y.z.c"
@@ -1147,7 +1160,10 @@ checkbutton .output -text [mc c99] \
 	-variable console.show -command show_hide_console
 pack .output -after .buttons -anchor n -expand 1 -fill x
 
-proc show_hide_console {} {ctsend "show_hide ${::console.show}"}
+proc show_hide_console {} {
+  update idletasks
+  ctsend "show_hide ${::console.show}"
+}
 show_hide_console
 
 # Map/Unmap events are generated by Windows only!
@@ -2648,12 +2664,12 @@ proc run_render_job {} {
       if {![file exists $tile.img]} continue
       if {$level == "" && [lindex [filetype $tile.img] end] == "png"} {
 	file rename -force $tile.img $tile.png
-	puts "\r> rename $tile.img $tile.png"
+	cputs "\r> rename $tile.img $tile.png"
       } elseif {$use_magick == "gm"} {
-	puts $fd "convert $tile.img $level $tile.png"
+	cputs $fd "convert $tile.img $level $tile.png"
 	lappend clean $tile.img
       } elseif {$use_magick == "magick"} {
-	puts $fd "$tile.img $level -identify -write $tile.png +delete"
+	cputs $fd "$tile.img $level -identify -write $tile.png +delete"
 	lappend clean $tile.img
       }
     }
